YTI-716 Update font awesome, update icon usage

--- a/src/app/components/common/modalTemplate.html
+++ b/src/app/components/common/modalTemplate.html
@@ -1,6 +1,6 @@
 <div class="modal-header" ng-class="headerClass">
   <h4 class="modal-title">
-    <a title="Close" data-dismiss="modal"><i ng-click="$dismiss('cancel')" class="fa fa-times"></i></a>
+    <a title="Close" data-dismiss="modal"><i ng-click="$dismiss('cancel')" class="fas fa-times"></i></a>
     <div ng-transclude="title"></div>
   </h4>
 </div>
