--- a/src/app/components/editor/propertyView.html
+++ b/src/app/components/editor/propertyView.html
@@ -8,7 +8,7 @@
                 class="btn btn-link pull-right remove"
                 ng-disabled="!ctrl.property.inUnstableState"
                 ng-click="ctrl.removeProperty(ctrl.property)">
-          <i class="fa fa-trash"></i>
+          <i class="fas fa-trash-alt"></i>
           <span translate>Delete property</span>
         </button>
     </div>
