--- a/src/app/components/editor/subjectView.html
+++ b/src/app/components/editor/subjectView.html
@@ -21,7 +21,7 @@
     <div ng-if="ctrl.entity.subject" class="concept-box">
 
         <h5>
-          <i class="fa fa-lightbulb-o"></i>
+          <i class="fas fa-lightbulb-o"></i>
           <span>{{ctrl.entity.subject | translateLabel: ctrl.model}}</span>
         </h5>
 
