--- a/src/app/components/form/errorPanel.html
+++ b/src/app/components/form/errorPanel.html
@@ -1,4 +1,4 @@
 <div class="alert alert-danger" role="alert" ng-if="error">
-  <span class="fa fa-exclamation-circle" aria-hidden="true"></span>
+  <span class="fas fa-exclamation-circle" aria-hidden="true"></span>
   <span>{{error | translate}}</span>
 </div>
