--- a/src/app/components/model/modelView.html
+++ b/src/app/components/model/modelView.html
@@ -35,7 +35,7 @@
           <export ng-hide="ctrl.isEditing()" entity="ctrl.model" context="ctrl.model"></export>
           <history model="ctrl.model" resource="ctrl.model" ng-hide="ctrl.isEditing()"></history>
           <button id="close_model_details_button" class="btn btn-link pull-right" ng-click="ctrl.visible = false">
-            <i class="fa fa-times"></i>
+            <i class="fas fa-times"></i>
             <span translate>Close</span>
           </button>
         </editable-entity-buttons>
