--- a/src/app/components/model/searchNamespaceModal.html
+++ b/src/app/components/model/searchNamespaceModal.html
@@ -1,7 +1,7 @@
 <div class="search-namespace">
   <div class="modal-header">
     <h4 class="modal-title">
-      <a><i ng-click="$dismiss('cancel')" class="fa fa-times"></i></a>
+      <a><i ng-click="$dismiss('cancel')" class="fas fa-times"></i></a>
       <span translate>Search namespaces</span>
     </h4>
   </div>
@@ -33,7 +33,6 @@
 
         <button type="button" class="btn btn-action btn-md pull-right"
                 ng-click="ctrl.createNew()">
-          <span class="glyphicon glyphicon-plus"></span>
           {{'Add new namespace' | translate}}
         </button>
 
