--- a/src/app/components/navigation/navigationBar.html
+++ b/src/app/components/navigation/navigationBar.html
@@ -40,11 +40,11 @@
       </a>
       <div class="dropdown-menu-right" uib-dropdown-menu>
         <a class="dropdown-item" ng-if="ctrl.isLoggedIn()" ng-click="ctrl.logOut()">
-          <i class="fa fa-sign-out"></i>
+          <i class="fas fa-sign-out-alt"></i>
           <span translate>LOG OUT</span>
         </a>
         <a class="dropdown-item" ng-if="!ctrl.isLoggedIn()" ng-click="ctrl.logIn()">
-          <i class="fa fa-sign-in"></i>
+          <i class="fas fa-sign-in-alt"></i>
           <span translate>LOG IN</span>
         </a>
         <div class="dropdown-divider" ng-hide="ctrl.noMenuItemsAvailable"></div>
