--- a/src/app/components/editor/searchClassModal.html
+++ b/src/app/components/editor/searchClassModal.html
@@ -2,7 +2,7 @@
 
   <div class="modal-header">
     <h4 class="modal-title">
-      <a><i ng-click="$dismiss('cancel')" class="fa fa-times"></i></a>
+      <a><i ng-click="$dismiss('cancel')" class="fas fa-times"></i></a>
       <span ng-show="ctrl.onlySelection" translate>Select class</span>
       <span ng-hide="ctrl.onlySelection" translate>Add class</span>
     </h4>
@@ -116,7 +116,7 @@
     <button type="button" class="btn btn-link cancel" ng-click="ctrl.close()" translate>Cancel</button>
 
     <div class="alert alert-danger" role="alert" ng-show="ctrl.cannotConfirm">
-      <span class="fa fa-exclamation-circle" aria-hidden="true"></span>
+      <span class="fas fa-exclamation-circle" aria-hidden="true"></span>
       <span>{{ctrl.cannotConfirm | translate}}</span>
     </div>
   </div>
