--- a/src/app/components/form/editableEntityButtons.html
+++ b/src/app/components/form/editableEntityButtons.html
@@ -26,7 +26,7 @@
           class="btn btn-link pull-right remove"
           ng-click="ctrl.removeEdited()"
           ng-show="ctrl.canRemove()">
-    <i class="fa fa-trash"></i>
+    <i class="fas fa-trash-alt"></i>
     <span translate>Remove</span>
   </button>
 
