--- a/src/app/components/model/searchOrganizationModal.html
+++ b/src/app/components/model/searchOrganizationModal.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
   <h4 class="modal-title">
-    <a><i ng-click="$dismiss('cancel')" class="fa fa-times"></i></a>
+    <a><i ng-click="$dismiss('cancel')" class="fas fa-times"></i></a>
     <span translate>Select organization</span>
   </h4>
 </div>
