--- a/src/app/components/editor/classForm.html
+++ b/src/app/components/editor/classForm.html
@@ -117,6 +117,6 @@
       <editable-constraint constraint="ctrl.class.constraint" model="ctrl.model" class="ctrl.class"></editable-constraint>
     </div>
 
-    <usage-panel entity="ctrl.class" context="ctrl.model"></usage-panel>
+    <usage-panel id="ctrl.id + '_' + ctrl.class.id.uri" entity="ctrl.class" context="ctrl.model"></usage-panel>
   </div>
 </div>
