--- a/src/app/components/model/modelForm.html
+++ b/src/app/components/model/modelForm.html
@@ -32,7 +32,7 @@
       </div>
     </div>
 
-    <usage-panel entity="ctrl.model"></usage-panel>
+    <usage-panel id="ctrl.id + '_' + ctrl.model.id.uri" entity="ctrl.model"></usage-panel>
   </div>
 
   <div class="col-lg-6 offset-lg-1">
