--- a/src/app/components/model/modelView.html
+++ b/src/app/components/model/modelView.html
@@ -40,7 +40,7 @@
           </button>
         </editable-entity-buttons>
 
-        <model-form model="ctrl.editableInEdit" model-controller="ctrl.modelController"></model-form>
+        <model-form id="ctrl.id" model="ctrl.editableInEdit" model-controller="ctrl.modelController"></model-form>
       </div>
     </fieldset>
   </form>
