--- a/src/app/components/common/historyModal.html
+++ b/src/app/components/common/historyModal.html
@@ -46,6 +46,6 @@
 
 </div>
 
-<div vlass="modal-footer">
+<div class="modal-footer">
   <button class="btn btn-link" type="button" ng-click="$dismiss('cancel')" translate>Close</button>
 </div>
