Fix asterisk selector class

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -561,7 +561,7 @@ reference-data-view.popup {
   font-size: small;
 }
 
-.fas-asterisk {
+.fa-asterisk {
   color: $danger;
   font-size: small;
 }
