YTI-712 Generate ID to accordion group through paths listed in description
Generate ID path through:
- properties in class form
- editable constraint in class form
- reusable predicate in property view.

--- a/src/app/components/editor/propertyView.html
+++ b/src/app/components/editor/propertyView.html
@@ -174,7 +174,7 @@
   <h4 translate>Reusable predicate</h4>
 
   <accordion open-id="predicateOpen" class="reusable-predicate">
-    <accordion-group identifier="'default'">
+    <accordion-group id="ctrl.id + '_' + ctrl.predicateNameCompact + '_reusable'" identifier="'default'">
 
       <accordion-heading>
         <h5>
