App name translation added for English language.

--- a/src/app/components/navigation/navigationBar.html
+++ b/src/app/components/navigation/navigationBar.html
@@ -17,7 +17,7 @@
               </g>
             </svg>
           </span>
-          <span class="apptitle">Tietomallit</span>
+          <span class="apptitle" translate>Data Vocabularies</span>
         </div>
       </a>
     </div>
