--- a/src/app/components/editor/classForm.html
+++ b/src/app/components/editor/classForm.html
@@ -28,6 +28,11 @@
     <editable ng-if="ctrl.class.isOfType('shape')" data-title="Specialized from class" link="ctrl.linkToScopeclass()" context="ctrl.model">
       <uri-select id="scopeClass" type="class" uri="ctrl.class.scopeClass" model="ctrl.model" mandatory="true" after-selected="ctrl.addPropertiesFromClassId(id, 'scope class')"></uri-select>
     </editable>
+
+    <editable data-title="Localname" context="ctrl.model">
+      <input id="localName" class="form-control" type="text" string-input="identifier" ng-trim="false" ng-model="ctrl.class.localName" />
+    </editable>
+
   </div>
   <div class="col-md-6">
     <editable-state-select ng-if="!ctrl.class.unsaved" id="classState" state="ctrl.class.status" model="ctrl.model"></editable-state-select>
@@ -62,7 +67,7 @@
                open-id="ctrl.openPropertyId"
                drag-sortable="ctrl.properties"
                drag-disabled="!ctrl.isEditing()"
-               on-reorder="ctrl.onPropertyReorder">      
+               on-reorder="ctrl.onPropertyReorder">
        <accordion-group id="ctrl.id + '_property_' + ctrl.formLabelNameToIdName(property.label)" ng-repeat="property in ctrl.properties track by property.internalId" identifier="property.internalId.uuid">
         <accordion-heading>
           <div drag-sortable-item>
