Changed language meta from dcterms to shacl

--- a/src/app/components/editor/propertyView.html
+++ b/src/app/components/editor/propertyView.html
@@ -35,7 +35,7 @@
       <editable-multiple-language-select ng-if="ctrl.model.isOfType('profile') && ctrl.property.dataType === 'rdf:langString'"
                                          data-title="Allowed languages"
                                          id="dataTypeAllowedLanguage"
-                                         ng-model="ctrl.property.language"
+                                         ng-model="ctrl.property.languageIn"
                                          required="false">
       </editable-multiple-language-select>
 
