YTI-916 Add heading to new model creating page
Also change breadcrumb title to same as the heading.

--- a/src/app/components/model/newModelPage.html
+++ b/src/app/components/model/newModelPage.html
@@ -1,5 +1,14 @@
 <div class="content-box">
   <form name="ctrl.form" class="editable-form">
+
+    <div class="row header">
+      <div class="col-12">
+        <h2>
+          <span>{{'Add new ' + ctrl.type | translate}}</span>
+        </h2>
+      </div>
+    </div>
+    
     <fieldset ng-disabled="ctrl.persisting">
 
       <div class="top-actions">
