--- a/src/app/components/frontPage.html
+++ b/src/app/components/frontPage.html
@@ -5,12 +5,13 @@
   <div class="row">
     <div class="col-md-4 mb-3">
       <div class="input-group input-group-lg input-group-search">
-        <input class="form-control"
+        <input id="front_page_search_input"
+               class="form-control"
                type="text"
                ng-model="$ctrl.search"
                placeholder="{{'Search' | translate}}" />
       </div>
-      <a href="#" ng-click="$ctrl.openAdvancedSearch()" translate>Advanced search</a>
+      <a id="advanced_search_link" href="#" ng-click="$ctrl.openAdvancedSearch()" translate>Advanced search</a>
     </div>
   </div>
 
@@ -20,7 +21,8 @@
       <div class="content-box">
         <h4 class="strong" translate>Classification</h4>
 
-        <div ng-repeat="classification in $ctrl.classifications"
+        <div id="{{classification.node.id + '_classification_filter_link'}}"
+             ng-repeat="classification in $ctrl.classifications"
              class="classification"
              ng-class="{ active: $ctrl.isClassificationSelected(classification.node) }"
              ng-click="$ctrl.toggleClassification(classification.node)">
@@ -36,22 +38,24 @@
       <div class="row mb-4">
         <div class="col-md-12">
 
-          <app-filter-dropdown class="pull-left"
+          <app-filter-dropdown id="organization_filter_dropdown"
+                               class="pull-left"
                                [options]="$ctrl.organizations"
                                [filter-subject]="$ctrl.organization$"></app-filter-dropdown>
 
-          <app-filter-dropdown class="pull-left ml-2"
+          <app-filter-dropdown id="model_type_filter_dropdown"
+                               class="pull-left ml-2"
                                [options]="$ctrl.modelTypes"
                                [filter-subject]="$ctrl.modelType$"></app-filter-dropdown>
 
           <div class="pull-right" uib-dropdown ng-if="$ctrl.canAddModel()">
-            <button class="btn btn-action" id="modelCreation" uib-dropdown-toggle>
+            <button id="model_creation_button" class="btn btn-action" uib-dropdown-toggle>
               <span translate>Add model</span>
             </button>
 
-            <div uib-dropdown-menu class="dropdown-menu-right" aria-labelledby="modelCreation">
-              <button class="dropdown-item" ng-click="$ctrl.addLibrary()" translate>Add library</button>
-              <button class="dropdown-item" ng-click="$ctrl.addProfile()" translate>Add profile</button>
+            <div uib-dropdown-menu class="dropdown-menu-right" aria-labelledby="model_creation_button">
+              <button id="add_library_button" class="dropdown-item" ng-click="$ctrl.addLibrary()" translate>Add library</button>
+              <button id="add_profile_button" class="dropdown-item" ng-click="$ctrl.addProfile()" translate>Add profile</button>
             </div>
           </div>
 
@@ -72,7 +76,7 @@
 
         <div class="row">
           <div class="col-md-12">
-            <div class="model" ng-repeat="model in $ctrl.filteredModels" ng-click="$ctrl.selectModel(model)">
+            <div id="{{model.prefix + '_filtered_model_link'}}" class="model" ng-repeat="model in $ctrl.filteredModels" ng-click="$ctrl.selectModel(model)">
 
               <span class="name">{{model.label | translateValue}}</span>
 
