Help fixed/reimplemented after iow -> tietomallit changes
Still misses proper localization texts and proper profile creation help content

--- a/src/app/components/advancedSearchModal.html
+++ b/src/app/components/advancedSearchModal.html
@@ -38,7 +38,7 @@
                ng-click="ctrl.selectSearchResult(searchResult)"
                key-control-selection>
 
-            <div class="content" ng-class="{last: last}">
+            <div class="content" ng-class="{last: $last}">
 
               <span class="title">
                 <i ng-class="searchResult.glyphIconClass"></i>
