--- a/src/app/components/editor/classForm.html
+++ b/src/app/components/editor/classForm.html
@@ -58,6 +58,7 @@
         <i class="fas fa-sort-alpha-down"></i>
       </a>
       <button-with-options ng-show="ctrl.isEditing()"
+                           class="add-property"
                            options="ctrl.addPropertyActions">
         <span translate>Add property</span>
       </button-with-options>
