--- a/src/app/components/editor/addPropertiesFromClassModal.html
+++ b/src/app/components/editor/addPropertiesFromClassModal.html
@@ -4,17 +4,19 @@
   <modal-body>
     <p><span>{{'Do you want to add following properties from ' + ctrl.classType + '?' | translate}}</span></p>
 
-    <div ng-repeat="(type, properties) in ctrl.properties track by $index">
-      <h5>{{type | translate}}</h5>
+    <div class="properties">
+      <div ng-repeat="(type, properties) in ctrl.properties track by $index">
+        <h5>{{type | translate}}</h5>
 
-      <div class="checkbox" ng-repeat="property in properties track by property.internalId.uri">
-        <label>
-          <input ng-disabled="ctrl.isExcluded(property)" type="checkbox" checklist-model="ctrl.selectedProperties" checklist-value="property" />
-          <span uib-tooltip="{{ctrl.tooltip(property)}}">
-          <i ng-class="property.glyphIconClass"></i>
-          {{property | translateLabel: ctrl.context}}
-        </span>
-        </label>
+        <div class="checkbox" ng-repeat="property in properties track by property.internalId.uri">
+          <label>
+            <input ng-disabled="ctrl.isExcluded(property)" type="checkbox" checklist-model="ctrl.selectedProperties" checklist-value="property" />
+            <span uib-tooltip="{{ctrl.tooltip(property)}}">
+              <i ng-class="property.glyphIconClass"></i>
+              {{property | translateLabel: ctrl.context}}
+            </span>
+          </label>
+        </div>
       </div>
     </div>
 
