--- a/src/styles/interactiveHelp.scss
+++ b/src/styles/interactiveHelp.scss
@@ -147,6 +147,10 @@ help-popover, help-popover-dimensions-calculator {
 
     padding: 1.125em 1.25em 1.5em;
 
+    h3 {
+      max-width: calc(100% - 10px);
+    }
+
     .button {
       margin-bottom: 0 !important;
     }
