--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -41,6 +41,15 @@ h4, .h4 {
   font-weight: bold;
 }
 
+.scrolling-full-height {
+  height: 100%;
+  overflow-y: auto;
+}
+
+.scrolling {
+  overflow-y: auto;
+}
+
 .dropdown-menu-right {
   right: 0;
   left: auto;
@@ -937,21 +946,6 @@ ajax-loading-indicator-small {
 
   app-ajax-loading-indicator-small {
     margin-top: 10px;
-  }
-}
-
-.help-selection {
-
-  overflow-y: auto;
-
-  // XXX: Same as .search-result ?
-  .help.story-line {
-    font-size: small;
-    cursor: pointer;
-    border: 1px solid $light;
-    margin-bottom: 10px;
-    padding: 10px;
-    box-shadow: 2px 2px 2px $light;
   }
 }
 
