--- a/src/app/components/editor/editableReferenceDataSelect.html
+++ b/src/app/components/editor/editableReferenceDataSelect.html
@@ -5,10 +5,10 @@
   </div>
 
   <div ng-if="ctrl.referenceData.length > 0" class="model-view__sub row">
-    <editable-table descriptor="ctrl.descriptor" expanded="ctrl.expanded"></editable-table>
+    <editable-table id="'editableReferenceDataSelect'" descriptor="ctrl.descriptor" expanded="ctrl.expanded"></editable-table>
   </div>
 
   <div ng-class="{'model-view__sub': !!ctrl.referenceData}" style="margin-bottom: 15px">
-    <button ng-if="ctrl.isEditing()" type="button" class="btn btn-action btn-sm" ng-click="ctrl.addReferenceData()" translate>Add reference data</button>
+    <button id="add_editable_reference_data_select_button" ng-if="ctrl.isEditing()" type="button" class="btn btn-action btn-sm" ng-click="ctrl.addReferenceData()" translate>Add reference data</button>
   </div>
 </div>
