--- a/src/app/components/common/searchResults.html
+++ b/src/app/components/common/searchResults.html
@@ -1,5 +1,5 @@
-<div ng-repeat="searchResult in ctrl.searchResults | filter : ctrl.isVisible track by searchResult.id.toString()"
-     id="{{searchResult.id.toString()}}"
+<div ng-repeat="searchResult in ctrl.searchResults | filter : ctrl.isVisible track by ctrl.generateSearchResultID(searchResult)"
+     id="{{ctrl.generateSearchResultID(searchResult)}}"
      ng-class="['search-result', { active: ctrl.isSelected(searchResult), disabled: searchResult.disabled, 'add-new': searchResult.isAddNew()} ]"
      title="{{ctrl.title(searchResult)}}"
      ng-click="ctrl.selectItem(searchResult)"
