--- a/src/app/components/model/modelForm.html
+++ b/src/app/components/model/modelForm.html
@@ -38,9 +38,12 @@
   <div class="col-lg-6 offset-lg-1">
     <classifications-view value="ctrl.model" context="ctrl.model"></classifications-view>
     <contributors-view value="ctrl.model" context="ctrl.model"></contributors-view>
-    <vocabularies-view model="ctrl.model"></vocabularies-view>
-    <reference-datas-view model="ctrl.model"></reference-datas-view>
-    <imported-namespaces-view model="ctrl.model" model-controller="ctrl.modelController"></imported-namespaces-view>
+    <vocabularies-view value="ctrl.model" context="ctrl.model"></vocabularies-view>
+    <reference-datas-view value="ctrl.model" context="ctrl.model"></reference-datas-view>
+    <imported-namespaces-view value="ctrl.model"
+                              context="ctrl.model"
+                              allow-profiles="ctrl.allowProfiles"
+                              namespaces-in-use="ctrl.namespacesInUse()"></imported-namespaces-view>
     <links-view model="ctrl.model"></links-view>
   </div>
 
