YTI-919 links to new model creation

--- a/src/app/components/model/modelForm.html
+++ b/src/app/components/model/modelForm.html
@@ -44,7 +44,7 @@
                               context="ctrl.model"
                               allow-profiles="ctrl.allowProfiles"
                               namespaces-in-use="ctrl.namespacesInUse()"></imported-namespaces-view>
-    <links-view model="ctrl.model"></links-view>
+    <links-view value="ctrl.model" context="ctrl.model"></links-view>
   </div>
 
 </div>
