--- a/src/app/components/model/newModelPage.html
+++ b/src/app/components/model/newModelPage.html
@@ -56,6 +56,7 @@
                                     context="ctrl.context"
                                     allow-profiles="ctrl.allowProfiles"
                                     namespaces-in-Use="ctrl.namespacesInUse"></imported-namespaces-view>
+          <links-view value="ctrl" context="ctrl.context"></links-view>
         </div>
       </div>
 
