--- a/src/app/components/model/referenceDataView.html
+++ b/src/app/components/model/referenceDataView.html
@@ -2,7 +2,7 @@
 
 <non-editable data-title="Reference data URI" value="ctrl.referenceData.id" context="ctrl.context"></non-editable>
 <non-editable data-title="Reference data name" value="ctrl.referenceData.title" context="ctrl.context"></non-editable>
-<non-editable data-title="Reference data status" value="ctrl.referenceDataStatusTranslated" context="ctrl.context"></non-editable>
+<non-editable data-title="Reference data status" value="ctrl.referenceData.status" value-as-localization-key="true" context="ctrl.context"></non-editable>
 <non-editable data-title="Description" value="ctrl.referenceData.description" context="ctrl.context"></non-editable>
 <non-editable data-title="Creator" value="ctrl.referenceData.creator" context="ctrl.context"></non-editable>
 
