YTI-712 Add IDs to add properties from class modal and to modal template

--- a/src/app/components/editor/addPropertiesFromClassModal.html
+++ b/src/app/components/editor/addPropertiesFromClassModal.html
@@ -10,7 +10,11 @@
 
         <div class="checkbox" ng-repeat="property in properties track by property.internalId.uri">
           <label>
-            <input ng-disabled="ctrl.isExcluded(property)" type="checkbox" checklist-model="ctrl.selectedProperties" checklist-value="property" />
+            <input id="{{'select_property_' + type + '_' + property.getIdIdentifierFromLabel(ctrl.languageService) + '_checkbox'}}"
+                   ng-disabled="ctrl.isExcluded(property)"
+                   type="checkbox"
+                   checklist-model="ctrl.selectedProperties"
+                   checklist-value="property" />
             <span uib-tooltip="{{ctrl.tooltip(property)}}">
               <i ng-class="property.glyphIconClass"></i>
               {{property | translateLabel: ctrl.context}}
@@ -20,12 +24,12 @@
       </div>
     </div>
 
-    <button class="btn btn-action btn-sm" ng-click="ctrl.selectAll()" translate>Select all</button>
-    <button class="btn btn-action btn-sm" ng-click="ctrl.deselectAll()" translate>Deselect all</button>
+    <button id="select_all_properties_button" class="btn btn-action btn-sm" ng-click="ctrl.selectAll()" translate>Select all</button>
+    <button id="deselect_all_properties_button" class="btn btn-action btn-sm" ng-click="ctrl.deselectAll()" translate>Deselect all</button>
   </modal-body>
 
   <modal-buttons>
-    <button class="btn btn-action confirm" type="button" ng-click="ctrl.confirm()" translate>Yes</button>
-    <button class="btn btn-link" type="button" ng-click="$dismiss('cancel')" translate>Cancel</button>
+    <button id="confirm_properties_from_class_button" class="btn btn-action confirm" type="button" ng-click="ctrl.confirm()" translate>Yes</button>
+    <button id="cancel_properties_from_class_button" class="btn btn-link" type="button" ng-click="$dismiss('cancel')" translate>Cancel</button>
   </modal-buttons>
 </modal-template>
