--- a/src/app/components/common/modalTemplate.html
+++ b/src/app/components/common/modalTemplate.html
@@ -1,6 +1,6 @@
 <div class="modal-header" ng-class="headerClass">
   <h4 class="modal-title">
-    <a title="Close" data-dismiss="modal"><i ng-click="$dismiss('cancel')" class="fas fa-times"></i></a>
+    <a title="Close" data-dismiss="modal"><i id="cancel_modal_template_link" ng-click="$dismiss('cancel')" class="fas fa-times"></i></a>
     <div ng-transclude="title"></div>
   </h4>
 </div>
@@ -12,7 +12,7 @@
 <div class="modal-footer">
   <div ng-transclude="buttons"></div>
   <div ng-if="defaultButtons">
-    <button class="btn btn-action confirm" type="button" ng-click="$close()" translate>Yes</button>
-    <button class="btn btn-link" type="button" ng-click="$dismiss('cancel')" translate>Cancel</button>
+    <button id="confirm_modal_template_button" class="btn btn-action confirm" type="button" ng-click="$close()" translate>Yes</button>
+    <button id="cancel_modal_template_button" class="btn btn-link" type="button" ng-click="$dismiss('cancel')" translate>Cancel</button>
   </div>
 </div>
