YTI-975 Sort classifications by label and translate them by ui language
Because classifications are now translated by ui language, remove unneccessary language context parameter.

--- a/src/app/components/model/modelForm.html
+++ b/src/app/components/model/modelForm.html
@@ -36,7 +36,7 @@
   </div>
 
   <div class="col-lg-6 offset-lg-1">
-    <classifications-view value="ctrl.model" context="ctrl.model"></classifications-view>
+    <classifications-view value="ctrl.model"></classifications-view>
     <contributors-view value="ctrl.model" context="ctrl.model"></contributors-view>
     <vocabularies-view value="ctrl.model" context="ctrl.model"></vocabularies-view>
     <reference-datas-view value="ctrl.model" context="ctrl.model"></reference-datas-view>
