--- a/src/app/components/model/newModelPage.html
+++ b/src/app/components/model/newModelPage.html
@@ -48,7 +48,7 @@
         </div>
 
         <div class="col-lg-6 offset-lg-1">
-          <classifications-view value="ctrl" context="ctrl.context"></classifications-view>
+          <classifications-view value="ctrl"></classifications-view>
           <contributors-view value="ctrl" context="ctrl.context"></contributors-view>
           <vocabularies-view value="ctrl" context="ctrl.context"></vocabularies-view>
           <reference-datas-view value="ctrl" context="ctrl.context"></reference-datas-view>
